# talent-rediscovery

./: .env.example  .gitattributes  CONTEXT.md  DESIGN.md  index.html  opencode.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  tsconfig.server.json  turbo.json  vite.config.ts
apps/memory/: pyproject.toml  requirements.txt
apps/memory/app/: main.py
apps/memory/app/domain/: models.py
apps/memory/app/routes/: memory.py
apps/memory/tests/: test_boundary.py  test_routes.py
data/: README.md  synthetic-candidate-records.csv
docs/: handoff-2026-05-12-triage-issues.md  handoff-9lcr8z.md  handoff.md
scripts/: check-app-store-session.ts  check-csv-parser.js  check-message-draft.js  check-search-criteria.js  check-shortlist-matches.js  dev-server.js
server/: app.ts  index.ts  intelligence-handler.ts  recruiting-memory.ts  serenity-memory-policy.ts
src/: api-client.ts  app-store.ts  candidate-memory.ts  copilot-tool-output.ts  csv-candidate-records.js  intelligence-layer.contract-check.ts  main.tsx  message-draft.d.ts  prototype-shell.css  prototype-shell.js  search-criteria.js  shortlist-matches.d.ts  shortlist-matches.js  styles.css
tests/: api-boundary.test.ts  api-client.test.ts  app-store-session.test.ts  architecture-boundaries.test.ts  candidate-memory-api.test.ts  candidate-memory.test.ts  candidate-notes-api.test.ts  candidate-record-import-api.test.ts  copilot-tool-output.test.ts  csv-candidate-records.test.ts  memory-client.test.ts  memory-sync.test.ts  message-draft.test.ts  search-criteria.test.ts  search-request-api.test.ts  (+4 more)
(+54 files in other folders)
